test/e2e/fixtures/api-key-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ignition-api-key
type: Opaque
stringData:
  apiKey: "test-api-key-for-e2e"
